testdata/baselines/reference/submodule/conformance/symbolType3.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
symbolType3.ts(1,9): error TS2304: Cannot find name 'Symbol'.
symbolType3.ts(2,8): error TS2304: Cannot find name 'Symbol'.
symbolType3.ts(3,6): error TS2304: Cannot find name 'Symbol'.
symbolType3.ts(4,8): error TS2304: Cannot find name 'Symbol'.
symbolType3.ts(7,3): error TS2304: Cannot find name 'Symbol'.
symbolType3.ts(8,3): error TS2304: Cannot find name 'Symbol'.
symbolType3.ts(9,3): error TS2304: Cannot find name 'Symbol'.
symbolType3.ts(10,3): error TS2304: Cannot find name 'Symbol'.
symbolType3.ts(12,3): error TS2304: Cannot find name 'Symbol'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== symbolType3.ts (9 errors) ====
    var s = Symbol();
            ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    delete Symbol.iterator;
           ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    void Symbol.toPrimitive;
         ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    typeof Symbol.toStringTag;
           ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    ++s;
    --s;
    + Symbol();
      ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    - Symbol();
      ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    ~ Symbol();
      ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    ! Symbol();
      ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    
    +(Symbol() || 0);
      ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.